packages/jsii/test/negatives/neg.property-name.2.ts
export class MyClass {
  public my_Prop?: number;
}
